# multireasoning

./: .env  README.md  hello.py  main.py  pyproject.toml  requirements.txt
src/: app.py  config.py  main.py  orchestrator.py  summarizer.py
src/agents/: base_agent.py  consistency_agent.py  math_agent.py
src/models/: openrouter.py
tests/: test_math_solver.py
